[package]
name = "module-auction-manager"
version = "0.4.4"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
frame-support = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
frame-system = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
sp-std = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
sp-io = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
orml-traits = { path = "../../orml/traits", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
utilities = { path = "../../utilities", default-features = false }
primitives = { package = "module-primitives", path = "../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
pallet-balances = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
orml-auction = { path = "../../orml/auction", default-features = false }
cdp-treasury = { package = "module-cdp-treasury", path = "../cdp_treasury", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-tokens/std",
	"support/std",
	"sp-io/std",
	"utilities/std",
	"primitives/std",
]
