[package]
name = "module-cdp-engine"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
rand_chacha = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-application-crypto = {workspace = true }
orml-traits = { workspace = true }
orml-utilities = { workspace = true }
sp-io = {workspace = true }
sp-runtime = {workspace = true }
sp-std = {workspace = true }
module-cdp-treasury = { workspace = true, optional = true }
module-support = { workspace = true }
module-loans = { workspace = true }
primitives = { workspace = true }

nutsfinance-stable-asset = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
orml-currencies = { workspace = true, features = ["std"] }
module-dex = { workspace = true, features = ["std"] }
module-evm-accounts = { workspace = true, features = ["std"] }
orml-tokens = { workspace = true, features = ["std"] }
module-evm = { workspace = true, features = ["std"] }
module-evm-bridge = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"module-loans/std",
	"nutsfinance-stable-asset/std",
	"orml-traits/std",
	"orml-utilities/std",
	"primitives/std",
	"rand_chacha/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"module-cdp-treasury?/std",
	"module-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"module-cdp-treasury/runtime-benchmarks",
	"module-dex/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"module-loans/try-runtime",
]
