[package]
name = "module-cdp-treasury"
version = "0.4.4"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0-alpha.6", default-features = false }
frame-support = { version = "2.0.0-alpha.6", default-features = false }
frame-system = { version = "2.0.0-alpha.6", default-features = false }
sp-std = { version = "2.0.0-alpha.6", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "module-primitives", path = "../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-alpha.6", default-features = false }
sp-io = { version = "2.0.0-alpha.6", default-features = false }
pallet-balances = { version = "2.0.0-alpha.6", default-features = false }
orml-currencies = { path = "../../orml/currencies", default-features = false }
orml-auction = { path = "../../orml/auction", default-features = false }
dex = { package = "module-dex", path = "../dex", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-tokens/std",
	"support/std",
	"primitives/std",
]
