[package]
name = 'module-collator-selection'
version = "2.26.0"
authors = ["Acala Developers"]
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
primitives = { workspace = true }

[dev-dependencies]
pallet-aura = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-tracing = { workspace = true, features = ["std"] }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	'sp-staking/runtime-benchmarks',
]
std = [
	"primitives/std",
	"scale-info/std",
	'parity-scale-codec/std',
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'pallet-authorship/std',
	'pallet-session/std',
	'sp-runtime/std',
	'sp-staking/std',
	'sp-std/std',
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-session/try-runtime",
]
